@@ -411,8 +411,10 @@ compat32
 packages.
 .B
 sboupgrade
-attempts to pass the correct architecture automatically for such builds based
-on the contents of the SlackBuild. This process is not necessarily bug-free;
+does not require
+.B
+ARCH
+to build compat32 packages. This process is not necessarily bug-free;
 please do not hesitate to report
 .B
 compat32
